@@ -1,4 +1,10 @@
 Changes with Apache 1.3b8
+ 
+  *) Upgrade the child spawning code in mod_rewrite for the RewriteMap
+     programs: ap_spawn_child_err() is used and the Win32 case now uses
+     CreateProcess() instead of a low-level execl() (which caused problems in
+     the past under Win32).
+     [Ralf S. Engelschall]
 
   *) A few cosmetics and trivial enhancements to APXS to make the
      generated Makefile more user friendly. [Ralf S. Engelschall]
